# packages/api-types/src/index.ts
@@ -103,6 +103,9 @@ export type FarmAdvisory = Schemas['FarmAdvisoryOut']
 
 export type FarmerDashboard = Schemas['FarmerDashboard']
 export type MinistryDashboard = Schemas['MinistryDashboard']
+export type HorizonResponse = Schemas['HorizonResponse']
+export type LeadHorizon = Schemas['LeadHorizon']
+export type LeadSkill = Schemas['LeadSkill']
 export type CoverageStats = Schemas['CoverageStats']
 export type RiskExposure = Schemas['RiskExposure']
 export type RiskBucket = Schemas['RiskBucket']
